wallpaper-crafter: fixed tags overflowing

--- a/wallpaper-crafter/gallery/index.css
+++ b/wallpaper-crafter/gallery/index.css
@@ -93,17 +93,25 @@ a {
   margin: 0;
   margin-top: 5px;
   padding: 2.5px;
+  padding-bottom: 5px;
   text-align: right;
+  align-self: flex-start;
 }
 .preset-author:hover {
   background-color: #333;
 }
 
 .preset-tags {
-  /* flex-basis: 75%; */
+  flex-basis: 75%;
   padding: 5px;
-  line-height: 10px;
+  /* line-height: 10px; */
   margin-bottom: 5px;
+  display: flex;
+  margin-top: 4px;
+  flex-wrap: wrap;
+}
+.preset-tag-container {
+
 }
 .preset-tags span {
   font-size: 25px;
@@ -116,7 +124,7 @@ a {
   color: #ddd;
   background-color: #333;
 }
-.preset-tags > span.seperator {
+.preset-tags span.seperator {
   margin-right: 15px;
 }
 
